2nd nix hash issue

--- a/episodes/2/2.md
+++ b/episodes/2/2.md
@@ -1514,4 +1514,44 @@ doesn't look the same. I think we can convert that to the SRI hash format with
 
 > Note: the output currently looks like this.
 
+So we can get the type as well, all right, so let's do:
+
+```nix
+❯ nix hash to-sri --type sha256 cf04af86dc085268c5f4470fbae49b18afbc221b78096aab842d934a76bad0ab
+
+warning: The old format conversion sub commands of `nix hash` were deprecated in favor of `nix hash convert`.
+sha256-zwSvhtwIUmjF9EcPuuSbGK+8Iht4CWqrhC2TSna60Ks=
+```
+
+We're gonna give it this hex hash I copied. And we're gonna get this string, which
+I believe, if I copy this one, is the same as in here, yes:
+
+```nix
+            # For now this is probably the best general approach
+            src = final.fetchurl {
+            url = finalAttrs.src.url;
+            hash = "sha256-zwSvhtwIUmjF9EcPuuSbGK+8Iht4CWqrhC2TSna60Ks=";
+            };
+```
+
+So really, nix really does the sha256 on the path that is being fetched here, it
+doesn't do any unpacking notably. The other hash is recursive I believe. Oh yeah,
+we can, nix hash, oh yeah we have a flage here for `--flat`:
+
+```nix
+❯ nix-hash --help
+```
+
+Yeah, so two modes are flat and I think recursive it's called in nix. If it's not
+flat it's gonna compute the hash over the dump of path, which.. it's not really
+super well documented here, is dump documented anywhere here, oh yeah okay, if
+it's not flat it's gonna use `nix-store --dump` which just creates a NAR format,
+and NAR stands for nix archive format or so and then it hashes this NAR contents
+and so for some fetchers it just does that instead so let's say we're gonna do
+`fetchFromGithub` instead, we're gonna say okay let's do `owner = tweag;`,
+`repo = `, let's pick infinisil instead, `owner = infinisil;`, `repo = nixus`,
+I don't really want to make ads here, `repo = system`, that's my system configuration,
+that sounds good, let's pick some revision, pick master
+
+
 
